--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/btn3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@id/btn1"
         app:layout_constraintRight_toRightOf="@id/btn1"
         app:layout_constraintTop_toBottomOf="@id/btn1" />
@@ -77,6 +78,7 @@
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/btn4"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@id/btn2"
         app:layout_constraintRight_toRightOf="@id/btn2"
         app:layout_constraintTop_toBottomOf="@id/btn2" />
@@ -85,6 +87,7 @@
         android:id="@+id/btn4"
         android:layout_width="150dp"
         android:layout_height="80dp"
+        android:layout_marginLeft="16dp"
         android:background="@drawable/btn_2"
         android:fontFamily="@font/mrsmonster"
         android:gravity="center"
