--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
         android:background="@drawable/btn_2"
         android:fontFamily="@font/mrsmonster"
         android:gravity="center"
-        android:text="High Score"
+        android:text="Score"
         android:textColor="@color/black"
         android:textSize="26sp"
         android:textStyle="bold"
