--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="74dp"
+        android:layout_height="86dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/logo"
         app:layout_constraintBottom_toTopOf="@id/btn1"
