--- a/app/src/main/res/layout/activity_pop_up.xml
+++ b/app/src/main/res/layout/activity_pop_up.xml
@@ -12,12 +12,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
+        android:layout_marginBottom="134dp"
         android:fontFamily="@font/days_later"
         android:gravity="center"
         android:text="Level Cleared!"
         android:textColor="#EEFF00"
         android:textSize="50sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/backButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,11 +27,10 @@
 
     <Button
         android:id="@+id/backButton"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_width="211dp"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="100dp"
-        android:layout_marginTop="125dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/btn_1"
         android:fontFamily="@font/mrsmonster"
         android:gravity="center"
@@ -41,15 +42,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/level"
-        app:layout_constraintVertical_bias="0.671"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/homeButton"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="300dp"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="60dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/btn_2"
         android:fontFamily="@font/mrsmonster"
         android:gravity="center"
@@ -57,16 +59,17 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/nextButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="410dp" />
+        app:layout_constraintTop_toBottomOf="@+id/backButton"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/nextButton"
         android:layout_width="150dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="106dp"
         android:background="@drawable/btn_3"
         android:fontFamily="@font/mrsmonster"
         android:gravity="center"
@@ -76,10 +79,8 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/homeButton"
-        app:layout_constraintVertical_bias="0.325"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
