--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -69,16 +69,17 @@
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/white_back"
-        android:hint="Email"
         android:fontFamily="@font/roboto"
-        android:textSize="20sp"
-        android:textColor="@color/black"
         android:gravity="center_vertical"
+        android:hint="Email"
         android:padding="5dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/btn2"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_select_mode2"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_select_mode2" />
 
     <EditText
         android:id="@+id/btn2"
